# MovieLens

./: .gitignore  README.md  compare.py  data_mining.ipynb  data_mining_movie.ipynb  data_mining_rating.ipynb  requirements.txt  setup.cfg
movielens/: __init__.py  accuracy.py  datasets.py  estimators.py  prediction.py  preprocessors.py  recommend.py
movielens/datasets/: __init__.py  base.py  movie.py  rating.py
movielens/estimators/: __init__.py  base.py  global_mean.py  group_mean.py  movie_mean.py  similar_users.py  slope_one.py  slope_one_go.py
movielens/selectors/: __init__.py  base.py  genre.py  similar.py
movielens/slope_one/: README.md  __init__.py  core.py  main.go  main.h  main.py  test.py
tests/: test_build_slope_one.py  test_datasets_movie.py  test_datasets_rating.py  test_preprocess.py  test_recommend.py
