[metadata]
description-file=README.md

[flake8]
max-line-length=120
exclude=workout/app/migrations,.tox,.pytest_cache,__pycache__,.mypy_cache

[isort]
skip=.tox,.pytest_cache
line_length=120
combine_as_imports=true
balanced_wrapping=true
lines_after_imports=2
not_skip=__init__.py
multi_line_output=4
import_heading_stdlib=built-in
import_heading_thirdparty=external
import_heading_firstparty=project
import_heading_localfolder=app
